--- a/input/grid2/grid_1.in
+++ b/input/grid2/grid_1.in
@@ -1,7 +1,7 @@
 
 ## input model
 
-lr          = 0.0001
+lr          = 1.e-4
 ini_epochs  = 5
 tot_epochs  = 250
 nb_epochs   = 151
@@ -24,3 +24,5 @@ mse2 = 100
 rel2 = 0
 evo2 = 0
 idn2 = 100
+
+Name = 20240201_143838_66434_1
