--- a/input/grid2/grid_4.in
+++ b/input/grid2/grid_4.in
@@ -1,14 +1,14 @@
 
 ## input model
 
-lr          = 0.0001
+lr          = 1.e-4
 ini_epochs  = 5
 tot_epochs  = 250
 nb_epochs   = 151
 losstype    = mse_idn
 z_dim       = 8
 nb_samples  = 10000
-nb_evol     = 8
+nb_evol     = 16
 
 nb_hidden = 1
 ae_type = simple
@@ -24,3 +24,5 @@ mse2 = 100
 rel2 = 0
 evo2 = 0
 idn2 = 100
+
+Name = 20240201_143838_66434_4
