--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,4 +20,4 @@ build:
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: src/conf.py
+  configuration: docs/src/conf.py
