--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,11 @@ build:
   tools:
     python: "3.9"
 
-
+python:
+  install:
+    - requirements: docs/src/requirements.txt
+    - method: pip
+      path: .
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
